@@ -1,3 +1,9 @@
+2008-11-14  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/CSharpAmbience.cs: Fixed full namespace display of members.
+
+	* Gui/CSharpTextEditorCompletion.cs: Worked on new completion.
+
 2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Gui/CSharpTextEditorCompletion.cs: Fix completion location off-by-one.
